Modificado página inicial

--- a/pages/index.html
+++ b/pages/index.html
@@ -6,6 +6,18 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <h1>Olá, mundinho! <span class="emoji">🌎</span></h1>
+  <h1 class="title">Olá, mundinho! <span class="emoji">🌎</span></h1>
+
+  <p>Primeiro app criado com Electron.js</p>
+
+  <footer>
+    <address>
+      <a href="https://github.com/cleberson-dev" class="contact-link">Github</a>
+      <a href="https://twitter.com/jrcleb" class="contact-link">Twitter</a>
+      <a href="https://linkedin.com/in/clebersondev" class="contact-link">LinkedIn</a>
+    </address>
+  </footer>
+
+  <script src="index.js"></script>
 </body>
 </html>
